--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@formspree/react": "^2.5.1",
     "@loaders.gl/draco": "^4.3.2",
     "@react-three/drei": "^9.115.0",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/fiber": "^8.2.2",
     "framer-motion": "^11.11.10",
     "framer-motion-3d": "^11.11.10",
     "gsap": "^3.12.5",
     "jotai": "^2.10.1",
     "leva": "^0.9.35",
     "loglevel": "^1.9.2",
+    "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
