--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.170.0",
     "uuid": "^11.1.0"
   },
